fix: grouping-selectors problem set

--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,5 +1,6 @@
 /* Add CSS Styling */
-.click-me-button {
+.positive-click-me
+.negative-click-me {
    font-size: 28px; 
    font-family: Helvetica, 'Times New Roman', sans-serif;
 }
