--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -15,11 +15,30 @@ body {
   justify-content: center;
 }
 
+.header {
+  font-weight: bold;
+  font-size: 18px;
+}
+
 .modal {
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 10px;
+  display: flex;
+  gap: 10px;
+}
+
+.right-side {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.right-side-bar {
+  display: flex;
+  justify-content: space-between;
 }
 
 .icon {
@@ -33,6 +52,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -46,9 +66,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
   border: 1px solid #eee;
   padding: 0;
 }
+
+
 
 button {
   cursor: pointer;
