--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,28 +2,75 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex: 1;
 }
 
 .header {
+  display: flex;
   height: 72px;
+  padding-left: 16px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  align-items: center;
 }
 
 .footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 72px;
   background: #eee;
   color: darkmagenta;
 }
 
+a,
+ul,
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+  color: white;
+  font-size: 24px;
+}
+
+.sidebar {
+  display: flex;
+  flex-shrink: 0;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding: 16px;
+  margin: 0;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 16px;
+  width: 300px;
+}
+
+.content-side {
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+}
+
+.content-cards {
+  padding: 48px;
+  display: flex;
+  gap: 32px;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
